--- a/src/app/components/educacion/editeducacion.component.html
+++ b/src/app/components/educacion/editeducacion.component.html
@@ -3,13 +3,28 @@
         <div>
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreEdu">Nombre de la institución</label>
-                    <input type="text" class="form-control" id="nombreEdu" name="nombreEdu" [(ngModel)]="educacion.nombreEdu" required>
+                    <label for="nombre">Nombre de la institución</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="educacion.nombre" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="descripcionEdu">Descripcion de sus estudios</label>
-                    <input type="text" class="form-control" id="descripcionEdu" name="descripcionEdu" [(ngModel)]="educacion.descripcionEdu" required>
+                    <label for="carrera">Carrera</label>
+                    <input type="text" class="form-control" id="carrera" name="carrera" [(ngModel)]="educacion.carrera" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="titulo">Título</label>
+                    <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="educacion.titulo" required>
+                </div> 
+                
+                <div class="form-group">
+                    <label for="inicio">Inicio</label>
+                    <input type="date" class="form-control" id="inicio" name="inicio" [(ngModel)]="educacion.inicio" required>
+                </div> 
+                
+                <div class="form-group">
+                    <label for="fin">Fín</label>
+                    <input type="date" class="form-control" id="fin" name="fin" [(ngModel)]="educacion.fin" required>
                 </div>
 
                 <button class="btn btn-primary">Editar educación</button>
