--- a/src/app/components/educacion/neweducacion.component.html
+++ b/src/app/components/educacion/neweducacion.component.html
@@ -3,13 +3,29 @@
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreEdu">Nombre de la institución</label>
-                    <input type="text" class="form-control" id="nombreEdu" name="nombreEdu" [(ngModel)]="nombreEdu" required>
+                    <label for="nombre">Nombre de la institución</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" [(ngModel)]="nombre" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="descripcionEdu">Descripcion de sus estudios</label>
-                    <input type="text" class="form-control" id="descripcionEdu" name="descripcionEdu" [(ngModel)]="descripcionEdu" required>
+                    <label for="carrera">Carrera</label>
+                    <input type="text" class="form-control" id="carrera" name="carrera" [(ngModel)]="carrera" required>
+                </div>
+
+                
+                <div class="form-group">
+                    <label for="titulo">Titulo</label>
+                    <input type="text" class="form-control" id="titulo" name="titulo" [(ngModel)]="titulo" required>
+                </div>
+                
+                <div class="form-group">
+                    <label for="inicio">Inicio</label>
+                    <input type="date" class="form-control" id="inicio" name="inicio" [(ngModel)]="inicio" required>
+                </div>
+                
+                <div class="form-group">
+                    <label for="fin">Fin</label>
+                    <input type="date" class="form-control" id="fin" name="fin" [(ngModel)]="fin" required>
                 </div>
 
                 <button class="btn btn-primary"> Agregar educación</button>
