--- a/src/app/components/experiencia/edit-experiencia.component.html
+++ b/src/app/components/experiencia/edit-experiencia.component.html
@@ -4,12 +4,27 @@
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
                     <label for="nombreE">Nombre de la empresa</label>
-                    <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE" required>
+                    <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.lugar" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion de la tarea</label>
-                    <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="expLab.descripcionE" required>
+                    <label for="puesto">Puesto</label>
+                    <input type="text" class="form-control" id="puesto" name="puesto" [(ngModel)]="expLab.puesto" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="descripcion">Descripcion de la tarea</label>
+                    <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="expLab.descripcion" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="inicio">Inicio</label>
+                    <input type="date" class="form-control" id="inicio" name="inicio" [(ngModel)]="expLab.inicio" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="fin">fin</label>
+                    <input type="date" class="form-control" id="fin" name="fin" [(ngModel)]="expLab.fin" required>
                 </div>
 
                 <button class="btn btn-primary"> Actualizar</button>
