--- a/src/app/components/experiencia/new-experiencia.component.html
+++ b/src/app/components/experiencia/new-experiencia.component.html
@@ -3,23 +3,29 @@
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Lugar</label>
-                    <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
+                    <label for="lugar">Lugar</label>
+                    <input type="text" class="form-control" id="lugar" name="lugar" [(ngModel)]="lugar" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="descripcionE">Puesto</label>
-                    <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
+                    <label for="puesto">Puesto</label>
+                    <input type="text" class="form-control" id="puesto" name="puesto" [(ngModel)]="puesto" required>
+                </div>
+
+                
+                <div class="form-group">
+                    <label for="descripcion">Descripcion de la tarea</label>
+                    <input type="text" class="form-control" id="descripcion" name="descripcion" [(ngModel)]="descripcion" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="descripcionE">Periodo</label>
-                    <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
+                    <label for="inicio">Inicio</label>
+                    <input type="date" class="form-control" id="inicio" name="inicio" [(ngModel)]="inicio" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion de la tarea</label>
-                    <input type="text" class="form-control" id="descripcionE" name="descripcionE" [(ngModel)]="descripcionE" required>
+                    <label for="fin">fin</label>
+                    <input type="date" class="form-control" id="fin" name="fin" [(ngModel)]="fin" required>
                 </div>
 
                 <button class="btn btn-primary"> Agregar experiencia</button>
