--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -7,10 +7,13 @@
 		<p class="titulo">Full Stack Developer Jr</p>
 	</div>
 	<div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
-		<h1>Acerca de mí</h1>
+		<h2>Acerca de mí</h2>
+			<button type="button" class="btn btn-dark" routerLink="/nuevoAcer" *ngIf="isLogged">Agregar información</button>
 		<span>
 			<ul *ngFor="let AcercaDe of acercaDe">
 				<li>{{AcercaDe.descripcion}}</li>
+				<td *ngIf="isLogged"><button class="btn btn-light me-2" routerLink="editAcer/{{AcercaDe.id}}">Editar</button></td>
+				<td *ngIf="isLogged"><button class="btn btn-danger" (click)="delete(AcercaDe.id)">Borrar</button></td>
 			</ul>
 		</span>
 	</div>
