--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-	<h1>Educación</h1>
+	<h2>Educación</h2>
 
 	<div class="col-lg-3">
 		<button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">Agregar educación</button>
@@ -16,8 +16,8 @@
 							<th>Título</th>
 							<th>Inicio</th>
 							<th>Fín</th>
-							<th></th>
-							<th></th>
+							<th *ngIf="isLogged"></th>
+							<th *ngIf="isLogged"></th>
 						</tr>
 					</thead>
 					<tbody>
