--- a/src/app/components/educacion/neweducacion.component.html
+++ b/src/app/components/educacion/neweducacion.component.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="row">
         <div>
+            <h2>Nueva educación</h2>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
                     <label for="nombre">Nombre de la institución</label>
