--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -15,6 +15,9 @@
 				<li><a href="https://www.instagram.com/bruno_cura2020/" target="_blank">Instagram</a></li>
 	  			<li><a href="https://github.com/BrunoCura2020" target="_blank">Github</a></li>
 			</ul>
+
+			<!-- <button class="btn btn-primary">Galeria de imagen</button> -->
+			
 			<button type="button" class="btn btn-outline-light" (click) = "login()" *ngIf="!isLogged">Acceder</button>
 			<button type="button" class="btn btn-outline-light" (click) = "onLogOut()" *ngIf="isLogged">Cerrar Sesión</button>
 		</div>
