--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -9,9 +9,10 @@
 	<div class="col lg 1">
 		<div class="col-lg-11">
 			<div *ngFor="let Proyecto of proyecto">
-				<h2>{{Proyecto.nombre}} | {{Proyecto.realizacion}}</h2>
+				<h3>{{Proyecto.nombre}} | {{Proyecto.realizacion}}</h3>
 				<p>{{Proyecto.descripcion}}</p>
-				<td *ngIf="isLogged"><button class="btn btn-light" routerLink="/editpro/{{Proyecto.id}}">Editar</button></td>
+				<p>{{Proyecto.imagen}}</p>
+				<td *ngIf="isLogged"><button class="btn btn-light me-2" routerLink="/editpro/{{Proyecto.id}}">Editar</button></td>
 				<td *ngIf="isLogged"><button class="btn btn-danger" (click)="delete(Proyecto.id)">Borrar</button></td>
 			</div>
 		</div>
