se agrega una mejora en la estetica

--- a/src/app/components/acerca-de/acerca-de.component.css
+++ b/src/app/components/acerca-de/acerca-de.component.css
@@ -6,6 +6,10 @@ div{
 	background-color: #a1b5cb;
 	text-align: center;
 }
+
+thead, tbody, tfoot, tr, td, #fun{
+	display: -webkit-inline-box;
+}
 /*Foto de perfil*/
 @media(min-width: 576px){
 	#fotoperfil{
