--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<h2>Educación</h2>
 
-	<div class="col-lg-3">
+	<div class="col-lg-3 edu">
 		<button type="button" class="btn btn-dark" routerLink="/nuevaedu" *ngIf="isLogged">Agregar educación</button>
 	</div>
 
@@ -36,3 +36,4 @@
 		</div>
 	</div>
 </div>
+
