--- a/src/app/components/grafico/grafico.component.html
+++ b/src/app/components/grafico/grafico.component.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<h2>Hard & Soft skills</h2>
-	<div class="text-center col-sm-4 col-md-4 col-lg-4 grafico grafico">
+	<div class="text-center col-sm-4 col-md-4 col-lg-4 grafico">
 		<circle-progress
 			[percent]="70"
 			[radius]="90"
