--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -11,8 +11,9 @@
 			</button>
 			
 			<ul class="dropdown-menu" role="menu">
-				<li><a href="https://www.instagram.com/bruno_cura2020/" target="_blank">Facebook</a></li>
+				<li><a href="https://es-la.facebook.com/people/Bruno-Cura/100083659617644/" target="_blank">Facebook</a></li>
 				<li><a href="https://www.instagram.com/bruno_cura2020/" target="_blank">Instagram</a></li>
+				<li><a href="https://ar.linkedin.com/in/bruno-cura" target="_blank">Linkedin</a></li>
 	  			<li><a href="https://github.com/BrunoCura2020" target="_blank">Github</a></li>
 			</ul>
 
