--- a/src/app/components/acerca-de/new-acerca-de/new-acerca-de.component.html
+++ b/src/app/components/acerca-de/new-acerca-de/new-acerca-de.component.html
@@ -3,7 +3,7 @@
         <h2>Crear tu información personal</h2>
         <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
             <div class="form-group">
-                <!-- <label for="descripcion">Información personal</label> -->
+                <label for="descripcion">Información personal</label>
                 <textarea type="text" class="form-control" id="descripcion" name="descripcion" rows="10" cols="40" [(ngModel)]="descripcion" required></textarea>
             </div>
             <button class="btn btn-primary"> Agregar información</button>
