--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<h2>Experiencia laboral</h2>
 
-	<div class="col-lg-3">
+	<div class="col-lg-3 exp">
 		<button type="button" class="btn btn-dark" routerLink="/nuevaexp" *ngIf="isLogged">Nueva experiencia</button>
 	</div>
 
