--- a/src/app/components/proyecto/new-proyecto/new-proyecto.component.html
+++ b/src/app/components/proyecto/new-proyecto/new-proyecto.component.html
@@ -23,11 +23,11 @@
                     <input type="date" class="form-control" id="realizacion" name="realizacion" [(ngModel)]="realizacion" required>
                 </div>
                 
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="imagen">imagen</label>
                     <input (change)="capturarFile($event)" type="file" class="form-control" id="imagen" name="imagen" [(ngModel)]="imagen" required>
-                    <!-- <input (change)="capturarFile($event)" type="file"> -->
-                </div>
+                    <input (change)="capturarFile($event)" type="file">
+                </div> -->
 
                 <div *ngIf="previsualizacion">
                     <img width="100px" [src]="previsualizacion" alt="">
